cleaned up variable names

--- a/mastermind_game/templates/mastermind_game/game.html
+++ b/mastermind_game/templates/mastermind_game/game.html
@@ -38,8 +38,8 @@
         <tr>
         <td>{{ guess.guess_num }}</td>
         <td>&emsp;&emsp;{{ guess.guess }}</td>
-        <td>&emsp;&emsp;{{ guess.nums_right }}</td>
-        <td>&emsp;&emsp;{{ guess.places_right }}</td>
+        <td>&emsp;&emsp;{{ guess.correct_digits }}</td>
+        <td>&emsp;&emsp;{{ guess.correct_position }}</td>
         </tr>
     {% endfor %}
     </tbody></table></div>
